# robot-explorer-models

./: .gitignore  CLAUDE.md  Dockerfile.xacro  README.md  manifest.json  pyproject.toml  robots.yaml
.github/workflows/: build-release.yml
models/a1/: robot.urdf
models/abb_crb15000_12/: robot.urdf
models/abb_crb15000_5/: robot.urdf
models/abb_irb120/: robot.urdf
models/abb_irb1200/: robot.urdf
models/abb_irb1200_7/: robot.urdf
models/abb_irb120t/: robot.urdf
models/abb_irb1600/: robot.urdf
models/abb_irb1600_10/: robot.urdf
models/abb_irb1600_8/: robot.urdf
models/abb_irb2400/: robot.urdf
models/abb_irb2600/: robot.urdf
models/abb_irb2600_185/: robot.urdf
scripts/: process.py  render_xacro.sh  serve.py
tmp/: abb_crb15000_12.urdf  abb_crb15000_5.urdf  abb_irb120.urdf  abb_irb1200.urdf  abb_irb1200_7.urdf  abb_irb120t.urdf  abb_irb1600.urdf  abb_irb1600_10.urdf  abb_irb1600_8.urdf  abb_irb2400.urdf  abb_irb2600.urdf  abb_irb2600_185.urdf  abb_irb4400.urdf  abb_irb4600.urdf  abb_irb4600_20.urdf  abb_irb4600_40.urdf  abb_irb52_120.urdf  abb_irb52_145.urdf  abb_irb5400.urdf  abb_irb6600.urdf  abb_irb6640.urdf  abb_irb6650s_125.urdf  abb_irb6650s_90.urdf  abb_irb6700_200.urdf  abb_irb6700_235.urdf  abb_irb7600.urdf  fanuc_crx10ia.urdf  fanuc_crx10ia_l.urdf  fanuc_crx10ia_lp.urdf  fanuc_crx20ia_l.urdf  fanuc_crx30ia.urdf  fanuc_crx3ia.urdf  fanuc_crx5ia.urdf  fanuc_er4ia.urdf  fanuc_lrmate10_11a.urdf  fanuc_lrmate10_11afc.urdf  fanuc_lrmate200id.urdf  fanuc_lrmate200id_4s.urdf  fanuc_lrmate200id_7c.urdf  fanuc_lrmate200id_7l.urdf  (+57 more)
(+1445 files in other folders)
